[gd_scene load_steps=4 format=2]

[ext_resource path="res://powers/nitro.gd" type="Script" id=1]
[ext_resource path="res://assets/speed.glb" type="PackedScene" id=2]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.278515, 1.54852, 1.87365 )

[node name="Nitro" type="Spatial"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )
script = ExtResource( 1 )

[node name="speed" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0.545968, 0, 1.25702 )

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.015491, 0.0309826, -0.085202 )
shape = SubResource( 1 )

[node name="nitro_timer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="timeout" from="nitro_timer" to="." method="_on_nitro_timer_timeout"]
